# domain-driven-design-with-fastapi

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: main.py
src/core/: config.py  db.py
src/metadata/: tags.py
src/models/: base.py  books.py
src/repositories/: books.py  repository.py
src/routers/v1/: books.py
src/schemas/: books.py
src/services/: books.py
