[tool.poetry]
name = "domain-driven-design-with-fastapi"
version = "0.1.0"
description = ""
authors = ["Evans <pauliutsevans@gmail.com>"]
readme = "README.md"
packages = [{include = "domain_driven_design_with_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pre-commit = "^3.3.1"
sqlalchemy = "2.0.7"
python-dotenv = "^1.0.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.177.1"}
pymysql = "^1.0.3"
psycopg2-binary = "^2.9.6"
asyncpg = "^0.27.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# === Black ===
[tool.black]
line-length = 120
include = '\.pyi?$'
extend-exclude = '''
/(
    | dist
    | .pytest_cache
    | .tox
    | docs
    | docs_src
    | .venv
    | .mypy_cache
)/
'''


# === Isort ===
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_glob = []


[tool.mypy]
python_version = "3.11"
files = ['*.py', '**/*.py']
exclude = ["docs*", "coverage", "tests"]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
no_site_packages = true
follow_imports = "skip"
ignore_missing_imports = true
strict_optional = false
warn_return_any = false
warn_unused_ignores = true
show_error_codes = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
#disallow_any_unimported = true


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
